--- a/converting_pdf_to_excel_file.ipynb
+++ b/converting_pdf_to_excel_file.ipynb
@@ -6,7 +6,8 @@
       "name": "converting pdf to excel file.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyN34uuko19+u6qqbpsj5mgn",
+      "toc_visible": true,
+      "authorship_tag": "ABX9TyPU7wAspOFBmA8AmQqm3p5+",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -155,26 +156,13 @@
     {
       "cell_type": "code",
       "source": [
-        "table[0].df.to_excel(\"table-in-excel.xls\")"
+        "table[0].df.to_excel(\"table-in-excel.xlsx\")"
       ],
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "6ceUW7225QDU",
-        "outputId": "9fcd4ce6-3c07-4065-af55-e001263fe051"
+        "id": "6ceUW7225QDU"
       },
-      "execution_count": 54,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stderr",
-          "text": [
-            "/usr/local/lib/python3.7/dist-packages/ipykernel_launcher.py:1: FutureWarning: As the xlwt package is no longer maintained, the xlwt engine will be removed in a future version of pandas. This is the only engine in pandas that supports writing in the xls format. Install openpyxl and write to an xlsx file instead. You can set the option io.excel.xls.writer to 'xlwt' to silence this warning. While this option is deprecated and will also raise a warning, it can be globally set and the warning suppressed.\n",
-            "  \"\"\"Entry point for launching an IPython kernel.\n"
-          ]
-        }
-      ]
+      "execution_count": 55,
+      "outputs": []
     },
     {
       "cell_type": "code",
